fix convert to toList() (#2016)